unpackaged/main/default/objects/Newstar_Log_Event__e/Newstar_Log_Event__e.object-meta.xml
<CustomObject>
    <label>NEWSTAR Log Event</label>
    <pluralLabel>NEWSTAR Log Events</pluralLabel>
</CustomObject>