unpackaged/main/default/objects/Newstar_Log_Event__e/fields/Primary_Object_ID__c.field-meta.xml
<CustomField>
        <fullName>Primary_Object_ID__c</fullName>
        <label>Primary Object ID</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>