unpackaged/main/default/objects/Newstar_Log_Event__e/fields/Status__c.field-meta.xml
<CustomField>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>